private-dormitory/force-app/main/default/objects/Reservation__c/Reservation__c.object-meta.xml
<CustomObject>
    <description>Tracks reservations of shared equipment by residents, including start and end times, and reservation status.</description>
    <label>Reservation</label>
    <nameField>
        <displayFormat>RES-{0000}</displayFormat>
        <label>Reservation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>