private-dormitory/force-app/main/default/objects/Reservation__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>The date and time when the reservation ends.</description>
    <label>End Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>