private-dormitory/force-app/main/default/objects/Reservation__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <description>Lookup to the inventory item being reserved. Links the reservation to the master equipment record.</description>
    <label>Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>