private-dormitory/force-app/main/default/objects/Reservation__c/fields/Resident__c.field-meta.xml
<CustomField>
    <fullName>Resident__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The person who makes the reservation.</description>
    <label>Resident</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>