private-dormitory/force-app/main/default/objects/Reservation__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>The date and time when the reservation starts</description>
    <label>Start Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>